[package]
name = "etc_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
hex="0.4.3"
rand = { version = "0.6.5", features = ["std"] }
secp256k1 = { version = "0.20.3", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version= "1.28.1" }
web3 = "0.17.0"
